Update the website's structure and add a blog section
This commit includes structural updates to the existing website, moving stylesheets and scripts to respective `styles` and `scripts` directories. The old link references have also been updated to point to the correct locations. Moreover, the Blog section has been added to the website, containing placeholder content for the time being. It also reorganizes navbar links and minor adjustments in styles.

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -30,14 +30,13 @@ label {
 
 input,
 textarea {
-    /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
-    font: 1em sans-serif;
+    font-size: 1em;
     /* Uniform text field size */
     width: 300px;
     box-sizing: border-box;
     /* Match form field borders */
     border: 1px solid #999;
+    font-family: "JetBrains Mono", monospace;
 }
 
 input:focus,
