--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     font-size: 16px;
-    font-family: "JetBrains Mono", sans-serif;
+    font-family: "JetBrains Mono", monospace;
     color: white;
     background-color: #444;
 }
