Changed index.html to redirect to the root domain. Added 404 page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,4 +98,9 @@ body {
 .link {
     text-decoration: none;
     color: inherit;
+
+    -webkit-user-select: none;   /* Chrome, Opera, & Safari */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, */
 }
