--- a/blogs/blog.css
+++ b/blogs/blog.css
@@ -80,18 +80,21 @@ p {
 
     .title {
         margin-bottom: 5px;
-        padding-top: 20px;
+        padding-top: 40px;
+        font-size: 52px;
     }
 
     .author, .date {
 
         margin-bottom: 5px;
+        font-size: 42px;
     }
 
     hr {
         margin-top: 20px;
     }
 
+    /* TODO: Move the back button somewhere */
     .left-element {
         display: none;
     }
