--- a/projects/project-page.css
+++ b/projects/project-page.css
@@ -8,6 +8,9 @@
 
 .centre-element {
     text-align: center; /* Centres the text within the element */
+
+    padding-top: 50px;
+    margin-bottom: 20px;
 }
 
 .left-element {
@@ -29,4 +32,30 @@
 
 .centre {
     text-align: center;
+}
+
+p {
+    white-space: pre-wrap;
+}
+
+.justified {
+    width: 50%;             /* Set the width of the text block */
+    margin: 0 auto;         /* Centre the block horizontally */
+    text-align: justify;    /* Justify the text inside the block */
+    padding: 20px;
+}
+
+.centre-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (max-width: 1250px) {
+    .justified {
+        width: 95%;             /* Set the width of the text block */
+        margin: 0 auto;         /* Centre the block horizontally */
+        text-align: justify;    /* Justify the text inside the block */
+        padding: 20px;
+    }
 }
