--- a/styles/main-mobile.css
+++ b/styles/main-mobile.css
@@ -1,3 +1,15 @@
 .mobile .navbar {
     display: none;
 }
+
+.mobile .navbar {
+    display: none;
+}
+
+.mobile .home-intro {
+
+}
+
+.mobile .home-intro-text {
+
+}
