--- a/old/blogs/blog.css
+++ b/old/blogs/blog.css
@@ -9,7 +9,7 @@ p {
     white-space: pre-wrap;
 }
 
-.title {
+.navbar-title {
     font-size: 50px;
 }
 
@@ -49,7 +49,7 @@ p {
     text-align: center;
 }
 
-.title {
+.navbar-title {
     font-size: 38px;
     margin-bottom: 10px;
 }
@@ -78,7 +78,7 @@ p {
         padding-top: 20px;
     }
 
-    .title {
+    .navbar-title {
         margin-bottom: 5px;
         padding-top: 40px;
         font-size: 52px;
