--- a/styles/main-desktop.css
+++ b/styles/main-desktop.css
@@ -97,7 +97,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('../img/home/1.png');
+    background-image: none;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
