--- a/projects/project-page.css
+++ b/projects/project-page.css
@@ -55,3 +55,9 @@ div.desc {
     display: table;
     clear: both;
 }
+
+.centre-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
